2.0.5:
Ozkan Sezer - Sun Dec 08 10:20:40 2019
 * Improved mp3 tag detection/skipping
Ozkan Sezer - Thu Dec 05 01:41:50 2019
 * Updated external libraries with multiple bug/security fixes
Vitaly Novichkov - Wed Dec 04 18:50:02 2019
 * Extended support for WAV files
Vitaly Novichkov - Tue Nov 26 15:55:50 2019
 * Added looping support for Opus files
Vitaly Novichkov - Tue, 26 Nov 2019 15:02:51
 * Allow rmid files be opened by native midi
Vitaly Novichkov - Tue Nov 26 14:37:25 2019
 * Fixed possible crash in win32 native midi
Vitaly Novichkov - Mon Nov 18 17:10:20 2019
 * Prevent clipping due to volume settings in modplug music
Michael Day - Mon Nov 18 07:43:52 2019
 * Fixed FLAC initial stutter
Michael Day - Sat Nov 16 22:11:29 PST 2019
 * Added looping support for FLAC files
Michael Day - Fri Nov 01 10:38:35 2019
 * Improved OGG looping support
Sam Lantinga - Fri Oct 04 18:00:42 2019
 * Fixed loading Opus audio as audio chunks
Sylvain Becker - Wed Aug 21 09:30:22 2019
 * Fixed Mix_FadeOutChannel() never setting fade_volume_reset
Ioan Chera - Sat Mar 30 14:07:03 2019
 * Fixed memory leak in macOS native midi code

2.0.4:
Ozkan Sezer - Wed, 10 Oct 2018 14:56:10
 * Removed smpeg support for mp3 music, now that it's replaced by libmpg123
Ozkan Sezer - Sun, 07 Oct 2018 08:50:02
 * Fixed mp3 mad decoder to skip tags, which otherwise would lead to crashes
Ozkan Sezer - Fri, 15 Jun 2018 05:32:56
 * Added support for Opus music playback using opusfile library

2.0.3:
Sam Lantinga - Thu, Mar  1, 2018  9:06:58 AM
 * Fixed regression where Mix_Init() would return 0 for available music formats

2.0.2:
Sam Lantinga - Fri Oct 20 22:04:50 PDT 2017
 * Implemented 24-bit and surround sound support for FLAC audio files
Sam Lantinga - Thu Oct 12 21:32:44 PDT 2017
 * Updated external libraries flac-1.3.2, libmodplug-0.8.9.0, libogg-1.3.2 and libvorbis-1.3.5
Ryan Gordon - Thu Oct 12 21:29:59 PDT 2017
 * Updated for SDL 2.0.6 and newer
Franc[e]sco - Thu Jul 20 22:03:19 2017 +0200