@@ -41,10 +41,40 @@ typedef struct
 static int TIMIDITY_Seek(void *context, double position);
 static void TIMIDITY_Delete(void *context);
 
+/* Config file should contain any other directory that needs
+ * to be added to the search path. The library adds the path
+ * of the config file to its search path, too. */
+#if defined(__WIN32__) || defined(__OS2__)
+# define TIMIDITY_CFG           "C:\\TIMIDITY\\TIMIDITY.CFG"
+#else  /* unix: */
+# define TIMIDITY_CFG_ETC       "/etc/timidity.cfg"
+# define TIMIDITY_CFG_FREEPATS  "/etc/timidity/freepats.cfg"
+#endif
+
 static int TIMIDITY_Open(const SDL_AudioSpec *spec)
 {
+    const char *cfg;
+    int rc = -1;
+
     (void) spec;
-    return Timidity_Init();
+
+    cfg = SDL_getenv("TIMIDITY_CFG");
+    if(!cfg) cfg = Mix_GetTimidityCfg();
+    if (cfg) {
+        return Timidity_Init(cfg); /* env or user override: no other tries */
+    }
+#if defined(TIMIDITY_CFG)
+    if (rc < 0) rc = Timidity_Init(TIMIDITY_CFG);
+#endif
+#if defined(TIMIDITY_CFG_ETC)
+    if (rc < 0) rc = Timidity_Init(TIMIDITY_CFG_ETC);
+#endif
+#if defined(TIMIDITY_CFG_FREEPATS)
+    if (rc < 0) rc = Timidity_Init(TIMIDITY_CFG_FREEPATS);
+#endif
+    if (rc < 0) rc = Timidity_Init(NULL); /* library's default cfg. */
+
+    return rc;
 }
 
 static void TIMIDITY_Close(void)
