@@ -15,6 +15,6 @@ typedef struct {
 } PathList;
 
 extern SDL_RWops *open_file(const char *name);
-extern void add_to_pathlist(const char *s);
+extern void add_to_pathlist(const char *s, size_t len);
 extern void *safe_malloc(size_t count);
 extern void free_pathlist(void);
