@@ -1,4 +1,6 @@
 2.0.5:
+Ozkan Sezer - Sun Dec 17 14:56:04 2019
+ * Timidity improvements. New Mix_SetTimidityCfg() public api.
 Ozkan Sezer - Sun Dec 08 10:20:40 2019
  * Improved mp3 tag detection/skipping
 Ozkan Sezer - Thu Dec 05 01:41:50 2019
